--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -1,4 +1,35 @@
-<div class="container-fluid">
+<div id="welcomePage" class="container-fluid">
+    <div class="row">
+        <div class="banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
+            <div class="banner-container col-md-12">
+                <div>
+                    <h4>
+                        <i class="fa fa-comment" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;WE WANT TO HERE FROM YOU! 
+                    </h4>
+                    Has Dreamfactory made a difference in your organization? Are you doing something novel and interesting with our software? We’d love to add your story to the Dreamfactory.com user showcase! E-mail us at info@dreamfactory.com with your project details and we’ll add your organization name, URL, and story to our site!
+                </div>
+            </div>
+        </div>
+        <div class="banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
+            <div class="banner-container col-md-12">
+                <div>
+                    <h4>
+                        <i class="fa fa-heart" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;ATTENTION OSS USERS
+                    </h4>
+                    Did you know Dreamfctory’s commercial solutions include connectors for Microsoft SQL Server, Oracle, SOAP-to-REST, API limiting, ELK stack integration, and much more? Contact Us to arrange a demo with our engineering team!
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div style="margin-top:20px;" class="row">
         <div class="col-sm-12">
             <p style="padding: 7px; border: 3px solid #37A5E5;">
