--- a/app/styles/sass/styles.scss
+++ b/app/styles/sass/styles.scss
@@ -15,6 +15,8 @@
 // theme bootswatch overrides, these allow bootswatch overrides on a specific theme
 @import "partials/themes/matan-light/_bootswatch_overrides.scss";
 
+@import "partials/themes/matan-light/homepage.scss";
+
 // needed for filter gradient
 @import "compass";
 
