--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -1,7 +1,7 @@
 <div id="welcomePage" class="container-fluid">
     <div class="row">
         <div class="banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
-            <div class="banner-container col-md-12">
+            <div class="banner-container col-md-12 col-lg-10 col-lg-offset-1">
                 <div>
                     <h4>
                         <i class="fa fa-comment" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;WE WANT TO HERE FROM YOU! 
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
-            <div class="banner-container col-md-12">
+            <div class="banner-container col-md-12 col-lg-10 col-lg-offset-1">
                 <div>
                     <h4>
                         <i class="fa fa-heart" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;ATTENTION OSS USERS
