--- a/app/styles/sass/partials/themes/matan-light/homepage.scss
+++ b/app/styles/sass/partials/themes/matan-light/homepage.scss
@@ -13,7 +13,20 @@
       & > div {
         display: inline-block;
         color: #1d3d56;
-        min-height: 185px;
+
+
+        @media (min-width: $screen-md-min) and (max-width: $screen-md-min + 230px) {
+          min-height: 215px;
+        }
+
+        @media (max-width: $screen-md-min) and (min-width: $screen-md-min - 200px) {
+          min-height: 155px;
+        }
+
+        @media (min-width: $screen-md-min + 231px) {
+          min-height: 185px;
+        }
+
 
         h4 {
           font-weight: bold;
