--- a/app/styles/sass/styles.css
+++ b/app/styles/sass/styles.css
@@ -9054,15 +9054,32 @@ body .df-sidebar-nav .nav-pills li.active:hover a {
 #welcomePage .banner .banner-container > div {
   display: inline-block;
   color: #1d3d56;
-  min-height: 185px;
 }
-/* line 18, partials/themes/matan-light/homepage.scss */
+@media (min-width: 992px) and (max-width: 1222px) {
+  /* line 13, partials/themes/matan-light/homepage.scss */
+  #welcomePage .banner .banner-container > div {
+    min-height: 215px;
+  }
+}
+@media (max-width: 992px) and (min-width: 792px) {
+  /* line 13, partials/themes/matan-light/homepage.scss */
+  #welcomePage .banner .banner-container > div {
+    min-height: 155px;
+  }
+}
+@media (min-width: 1223px) {
+  /* line 13, partials/themes/matan-light/homepage.scss */
+  #welcomePage .banner .banner-container > div {
+    min-height: 185px;
+  }
+}
+/* line 31, partials/themes/matan-light/homepage.scss */
 #welcomePage .banner .banner-container > div h4 {
   font-weight: bold;
   color: #2e2ea3;
   font-size: 14px;
 }
-/* line 23, partials/themes/matan-light/homepage.scss */
+/* line 36, partials/themes/matan-light/homepage.scss */
 #welcomePage .banner .banner-container > div h4 i.fa {
   color: #faa20c;
 }
