--- a/app/styles/sass/partials/themes/matan-light/_homepage.scss
+++ b/app/styles/sass/partials/themes/matan-light/_homepage.scss
@@ -1,40 +1,49 @@
-#welcomePage {
-  .banner {
-    margin-top: 40px;
+.main-page {
+  .df-section {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 
-    .banner-container {
-      border-radius: 2px;
-      box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
-      background-color: #ffffff;
+  #welcomePage {
+    .banner {
+      margin-top: 30px;
+      padding-left: 15px;
+      padding-right: 15px;
 
-      padding-top: 15px;
-      padding-bottom: 25px;
+      .banner-container {
+        border-radius: 2px;
+        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+        background-color: #ffffff;
 
-      & > div {
-        display: inline-block;
-        color: #1d3d56;
+        padding-top: 15px;
+        padding-bottom: 25px;
 
-
-        @media (min-width: $screen-md-min) and (max-width: $screen-md-min + 230px) {
-          min-height: 215px;
-        }
-
-        @media (max-width: $screen-md-min) and (min-width: $screen-md-min - 200px) {
-          min-height: 155px;
-        }
-
-        @media (min-width: $screen-md-min + 231px) {
-          min-height: 185px;
-        }
+        & > div {
+          display: inline-block;
+          color: #1d3d56;
 
 
-        h4 {
-          font-weight: bold;
-          color: #2e2ea3;
-          font-size: 14px;
+          @media (min-width: $screen-md-min) and (max-width: $screen-md-min + 230px) {
+            min-height: 170px;
+          }
 
-          i.fa {
-            color: #faa20c;
+          @media (max-width: $screen-md-min) and (min-width: $screen-md-min - 200px) {
+            min-height: 155px;
+          }
+
+          @media (min-width: $screen-md-min + 231px) {
+            min-height: 185px;
+          }
+
+
+          h4 {
+            font-weight: bold;
+            color: #2e2ea3;
+            font-size: 14px;
+
+            i.fa {
+              color: #faa20c;
+            }
           }
         }
       }
