--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -22,30 +22,39 @@
         </div>
     </div>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div style="margin-top:20px;" class="row">
-        <div class="col-sm-12">
-            <p style="padding: 7px; border: 3px solid #37A5E5;">
-                <b>Attention OSS users</b>: Did you know DreamFactory's commercial solutions include connectors for Microsoft SQL Server, Oracle,
-                SOAP-to-REST, API limiting, ELK stack integration, and much more? <a href="https://www.dreamfactory.com/request-dreamfactory-silver-demo" target="_blank">Contact Us</a> to arrange a demo with our engineering team!
-            </p>
-            <p style="padding: 7px; border: 3px solid #37A5E5;">
-                <b>We want to hear from you!</b> Has DreamFactory made a difference in your organization? Are you doing something novel and interesting with our software? We'd love to add your story to the DreamFactory.com user showcase! E-mail us at info AT dreamfactory.com with your project details and we'll add your organization name, URL, and story to our site!
-            </p>
+    <div class="row">
+        <div class="second-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
+            <div class="second-banner-container col-md-12 col-lg-10 col-lg-offset-1">
+                <h3>Welcome to DreamFactory!</h3>
 
-            <h3 style="margin-top:0;">Welcome to DreamFactory!</h3>
-
-
-            <p>DreamFactory provides all of the backend services that you need to build great mobile, web, and IoT applications. Follow the links below to get started:</p>
+                <p>DreamFactory provides all of the backend services that you need to build great mobile, web, and IoT applications. Follow the links below to get started:</p>
+            </div>
         </div>
+
+        <div class="second-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
+            <div class="second-banner-container col-md-12 col-lg-10 col-lg-offset-1">
+                <div class="df-mac-preview">
+                    <div class="df-mac-preview-overlay blured"></div>
+                    <div class="df-mac-preview-overlay circle">
+                        <i class="fa fa-play" aria-hidden="true"></i>
+                    </div>
+                    <div class="df-mac-preview-overlay text">
+                        <div>Watch Video</div>
+                    </div>
+                    <img src="/images/macbook-hp-df-1.png">
+                </div>
+            </div>
+        </div>
+
+
+
+
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div style="margin-top:10px;" class="row">
         <div class="col-sm-6">
             <p><a href="http://wiki.dreamfactory.com/DreamFactory/Tutorials" target="tutorials">Written Tutorials</a></p>
