--- a/app/styles/sass/partials/themes/matan-light/_homepage.scss
+++ b/app/styles/sass/partials/themes/matan-light/_homepage.scss
@@ -1,3 +1,7 @@
+$play-circle-diameter: "2vw + 30px";
+$left-circle-centering: "50% - (#{ $play-circle-diameter }) / 2";
+$top-circle-centering: "32% - (#{ $play-circle-diameter }) / 2";
+
 .main-page {
   .df-section {
     padding-left: 15px;
@@ -5,12 +9,98 @@
   }
 
   #welcomePage {
+    .second-banner {
+      padding-left: 15px;
+      padding-right: 15px;
+      margin-top: 30px;
+      //border: 1px #00b3ee solid;
+
+      .second-banner-container {
+        //border: 1px #00bc8c solid;
+        padding-right: 0px;
+        padding-left: 0px;
+
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.75;
+        letter-spacing: normal;
+        color: #1d3d56;
+        font-size: 16px;
+
+        h3 {
+          font-family: Lato;
+          margin-top: 0px;
+          color: #2e2ea3;
+          font-size: 25px;
+          font-weight: bold;
+          margin-bottom: 0px;
+        }
+      }
+
+      .df-mac-preview {
+        width: 80%;
+        display: block;
+        margin: auto;
+        position: relative;
+
+        & > img {
+          width: 100%;
+        }
+
+        & > .df-mac-preview-overlay {
+          width: 100%;
+          height: 68%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          //border: 1px #9B479F solid;
+          z-index: 20;
+
+          &.blured {
+            opacity: 0.8;
+            background-color: #ffffff;
+          }
+
+          &.circle {
+            width: calc(#{ $play-circle-diameter });
+            height: calc(#{ $play-circle-diameter });
+            line-height: calc(#{ $play-circle-diameter });
+            left: calc(#{ $left-circle-centering });
+            top: calc(#{ $top-circle-centering });
+            border-radius: 50%;
+            border: 1px #5b5bd9 solid;
+            text-align: center;
+
+            .fa-play {
+              vertical-align: middle;
+              font-size: calc(1vw + 10px);
+              margin-left: 9%;
+              color: #5b5bd9;
+            }
+          }
+
+          &.text {
+            text-align: center;
+            font-size: 14px;
+
+            & > div {
+              display: block;
+              margin-top: calc(36% + (1vw / 3) + 3px);
+              color: #0a0a75;
+            }
+          }
+        }
+      }
+    }
+
     .banner {
       margin-top: 30px;
       padding-left: 15px;
       padding-right: 15px;
+      //border: 1px #00b3ee solid;
 
       .banner-container {
+        //border: 1px #00bc8c solid;
         border-radius: 2px;
         box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
         background-color: #ffffff;
