--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -1,7 +1,7 @@
 <div id="welcomePage" class="container-fluid">
     <div class="row">
-        <div class="banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
-            <div class="banner-container col-md-12 col-lg-10 col-lg-offset-1">
+        <div class="first-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
+            <div class="banner first-banner-container col-md-12 col-lg-10 col-lg-offset-1">
                 <div>
                     <h4>
                         <i class="fa fa-comment" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;WE WANT TO HERE FROM YOU! 
@@ -10,8 +10,8 @@
                 </div>
             </div>
         </div>
-        <div class="banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
-            <div class="banner-container col-md-12 col-lg-10 col-lg-offset-1">
+        <div class="first-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
+            <div class="banner first-banner-container col-md-12 col-lg-10 col-lg-offset-1">
                 <div>
                     <h4>
                         <i class="fa fa-heart" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;ATTENTION OSS USERS
@@ -28,6 +28,27 @@
                 <h3>Welcome to DreamFactory!</h3>
 
                 <p>DreamFactory provides all of the backend services that you need to build great mobile, web, and IoT applications. Follow the links below to get started:</p>
+                <p>
+
+                    <div data-ng-repeat="resource in
+                        [
+                            {name: 'Written Tutorials', link: 'http://wiki.dreamfactory.com/DreamFactory/Tutorials'},
+                            {name: 'Video Tutorials', link: 'http://wiki.dreamfactory.com/DreamFactory/Videos'},
+                            {name: 'Full Documentation', link: 'http://wiki.dreamfactory.com/'},
+                            {name: 'Community Forum', link: 'http://community.dreamfactory.com/'},
+                            {name: 'Bugs and Feature Requests', link: 'https://github.com/dreamfactorysoftware/dreamfactory/issues'},
+                            {name: 'DreamFactory on Twitter', link: 'https://twitter.com/dfsoftwareinc'},
+                            {name: 'DreamFactory Blog', link: 'http://blog.dreamfactory.com/'},
+                            {name: 'Contact Support', link: 'http://www.dreamfactory.com/support'},
+                        ]
+                    ">
+                        <div class="banner resource-link">
+                            <i class="fa fa-file-text" aria-hidden="true"></i>
+                            &nbsp;
+                            <a href="{{resource.link}}" target="_blank">{{resource.name}}</a>
+                        </div>
+                    </div>
+                </p>
             </div>
         </div>
 
