--- a/app/styles/sass/partials/themes/matan-light/_homepage.scss
+++ b/app/styles/sass/partials/themes/matan-light/_homepage.scss
@@ -9,6 +9,55 @@ $top-circle-centering: "32% - (#{ $play-circle-diameter }) / 2";
   }
 
   #welcomePage {
+    .banner {
+      border-radius: 2px;
+      box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+      background-color: #ffffff;
+    }
+
+    .first-banner {
+      margin-top: 30px;
+      padding-left: 15px;
+      padding-right: 15px;
+      //border: 1px #00b3ee solid;
+
+      .first-banner-container {
+        //border: 1px #00bc8c solid;
+
+        padding-top: 15px;
+        padding-bottom: 25px;
+
+        & > div {
+          display: inline-block;
+          color: #1d3d56;
+
+
+          @media (min-width: $screen-md-min) and (max-width: $screen-md-min + 230px) {
+            min-height: 170px;
+          }
+
+          @media (max-width: $screen-md-min) and (min-width: $screen-md-min - 200px) {
+            min-height: 155px;
+          }
+
+          @media (min-width: $screen-md-min + 231px) {
+            min-height: 185px;
+          }
+
+
+          h4 {
+            font-weight: bold;
+            color: #2e2ea3;
+            font-size: 14px;
+
+            i.fa {
+              color: #faa20c;
+            }
+          }
+        }
+      }
+    }
+
     .second-banner {
       padding-left: 15px;
       padding-right: 15px;
@@ -91,51 +140,19 @@ $top-circle-centering: "32% - (#{ $play-circle-diameter }) / 2";
           }
         }
       }
-    }
 
-    .banner {
-      margin-top: 30px;
-      padding-left: 15px;
-      padding-right: 15px;
-      //border: 1px #00b3ee solid;
+      .resource-link {
+        display: inline-block;
 
-      .banner-container {
-        //border: 1px #00bc8c solid;
-        border-radius: 2px;
-        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
-        background-color: #ffffff;
+        padding-right: 15px;
+        padding-left: 15px;
+        padding-top: 2px;
+        padding-bottom: 3px;
 
-        padding-top: 15px;
-        padding-bottom: 25px;
+        border-radius: 4px;
+        box-shadow: 0 6px 10px -5px rgba(0, 0, 0, 0.2);
 
-        & > div {
-          display: inline-block;
-          color: #1d3d56;
-
-
-          @media (min-width: $screen-md-min) and (max-width: $screen-md-min + 230px) {
-            min-height: 170px;
-          }
-
-          @media (max-width: $screen-md-min) and (min-width: $screen-md-min - 200px) {
-            min-height: 155px;
-          }
-
-          @media (min-width: $screen-md-min + 231px) {
-            min-height: 185px;
-          }
-
-
-          h4 {
-            font-weight: bold;
-            color: #2e2ea3;
-            font-size: 14px;
-
-            i.fa {
-              color: #faa20c;
-            }
-          }
-        }
+        margin-bottom: 10px;
       }
     }
   }
