--- a/app/styles/sass/styles.css
+++ b/app/styles/sass/styles.css
@@ -9050,12 +9050,62 @@ body .df-sidebar-nav .nav-pills li.active:hover a {
   padding-right: 15px;
 }
 /* line 12, partials/themes/matan-light/_homepage.scss */
+.main-page #welcomePage .banner {
+  border-radius: 2px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+}
+/* line 18, partials/themes/matan-light/_homepage.scss */
+.main-page #welcomePage .first-banner {
+  margin-top: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+/* line 24, partials/themes/matan-light/_homepage.scss */
+.main-page #welcomePage .first-banner .first-banner-container {
+  padding-top: 15px;
+  padding-bottom: 25px;
+}
+/* line 30, partials/themes/matan-light/_homepage.scss */
+.main-page #welcomePage .first-banner .first-banner-container > div {
+  display: inline-block;
+  color: #1d3d56;
+}
+@media (min-width: 992px) and (max-width: 1222px) {
+  /* line 30, partials/themes/matan-light/_homepage.scss */
+  .main-page #welcomePage .first-banner .first-banner-container > div {
+    min-height: 170px;
+  }
+}
+@media (max-width: 992px) and (min-width: 792px) {
+  /* line 30, partials/themes/matan-light/_homepage.scss */
+  .main-page #welcomePage .first-banner .first-banner-container > div {
+    min-height: 155px;
+  }
+}
+@media (min-width: 1223px) {
+  /* line 30, partials/themes/matan-light/_homepage.scss */
+  .main-page #welcomePage .first-banner .first-banner-container > div {
+    min-height: 185px;
+  }
+}
+/* line 48, partials/themes/matan-light/_homepage.scss */
+.main-page #welcomePage .first-banner .first-banner-container > div h4 {
+  font-weight: bold;
+  color: #2e2ea3;
+  font-size: 14px;
+}
+/* line 53, partials/themes/matan-light/_homepage.scss */
+.main-page #welcomePage .first-banner .first-banner-container > div h4 i.fa {
+  color: #faa20c;
+}
+/* line 61, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner {
   padding-left: 15px;
   padding-right: 15px;
   margin-top: 30px;
 }
-/* line 18, partials/themes/matan-light/_homepage.scss */
+/* line 67, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .second-banner-container {
   padding-right: 0px;
   padding-left: 0px;
@@ -9066,7 +9116,7 @@ body .df-sidebar-nav .nav-pills li.active:hover a {
   color: #1d3d56;
   font-size: 16px;
 }
-/* line 30, partials/themes/matan-light/_homepage.scss */
+/* line 79, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .second-banner-container h3 {
   font-family: Lato;
   margin-top: 0px;
@@ -9075,18 +9125,18 @@ body .df-sidebar-nav .nav-pills li.active:hover a {
   font-weight: bold;
   margin-bottom: 0px;
 }
-/* line 40, partials/themes/matan-light/_homepage.scss */
+/* line 89, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview {
   width: 80%;
   display: block;
   margin: auto;
   position: relative;
 }
-/* line 46, partials/themes/matan-light/_homepage.scss */
+/* line 95, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview > img {
   width: 100%;
 }
-/* line 50, partials/themes/matan-light/_homepage.scss */
+/* line 99, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview > .df-mac-preview-overlay {
   width: 100%;
   height: 68%;
@@ -9095,12 +9145,12 @@ body .df-sidebar-nav .nav-pills li.active:hover a {
   left: 0;
   z-index: 20;
 }
-/* line 59, partials/themes/matan-light/_homepage.scss */
+/* line 108, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview > .df-mac-preview-overlay.blured {
   opacity: 0.8;
   background-color: #ffffff;
 }
-/* line 64, partials/themes/matan-light/_homepage.scss */
+/* line 113, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview > .df-mac-preview-overlay.circle {
   width: calc(2vw + 30px);
   height: calc(2vw + 30px);
@@ -9111,70 +9161,34 @@ body .df-sidebar-nav .nav-pills li.active:hover a {
   border: 1px #5b5bd9 solid;
   text-align: center;
 }
-/* line 74, partials/themes/matan-light/_homepage.scss */
+/* line 123, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview > .df-mac-preview-overlay.circle .fa-play {
   vertical-align: middle;
   font-size: calc(1vw + 10px);
   margin-left: 9%;
   color: #5b5bd9;
 }
-/* line 82, partials/themes/matan-light/_homepage.scss */
+/* line 131, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview > .df-mac-preview-overlay.text {
   text-align: center;
   font-size: 14px;
 }
-/* line 86, partials/themes/matan-light/_homepage.scss */
+/* line 135, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview > .df-mac-preview-overlay.text > div {
   display: block;
   margin-top: calc(36% + (1vw / 3) + 3px);
   color: #0a0a75;
 }
-/* line 96, partials/themes/matan-light/_homepage.scss */
-.main-page #welcomePage .banner {
-  margin-top: 30px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-/* line 102, partials/themes/matan-light/_homepage.scss */
-.main-page #welcomePage .banner .banner-container {
-  border-radius: 2px;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
-  background-color: #ffffff;
-  padding-top: 15px;
-  padding-bottom: 25px;
-}
-/* line 111, partials/themes/matan-light/_homepage.scss */
-.main-page #welcomePage .banner .banner-container > div {
+/* line 144, partials/themes/matan-light/_homepage.scss */
+.main-page #welcomePage .second-banner .resource-link {
   display: inline-block;
-  color: #1d3d56;
-}
-@media (min-width: 992px) and (max-width: 1222px) {
-  /* line 111, partials/themes/matan-light/_homepage.scss */
-  .main-page #welcomePage .banner .banner-container > div {
-    min-height: 170px;
-  }
-}
-@media (max-width: 992px) and (min-width: 792px) {
-  /* line 111, partials/themes/matan-light/_homepage.scss */
-  .main-page #welcomePage .banner .banner-container > div {
-    min-height: 155px;
-  }
-}
-@media (min-width: 1223px) {
-  /* line 111, partials/themes/matan-light/_homepage.scss */
-  .main-page #welcomePage .banner .banner-container > div {
-    min-height: 185px;
-  }
-}
-/* line 129, partials/themes/matan-light/_homepage.scss */
-.main-page #welcomePage .banner .banner-container > div h4 {
-  font-weight: bold;
-  color: #2e2ea3;
-  font-size: 14px;
-}
-/* line 134, partials/themes/matan-light/_homepage.scss */
-.main-page #welcomePage .banner .banner-container > div h4 i.fa {
-  color: #faa20c;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 2px;
+  padding-bottom: 3px;
+  border-radius: 4px;
+  box-shadow: 0 6px 10px -5px rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px;
 }
 
 /* line 9, partials/_base.scss */
