--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -32,18 +32,18 @@
 
                     <div data-ng-repeat="resource in
                         [
-                            {name: 'Written Tutorials', link: 'http://wiki.dreamfactory.com/DreamFactory/Tutorials'},
-                            {name: 'Video Tutorials', link: 'http://wiki.dreamfactory.com/DreamFactory/Videos'},
-                            {name: 'Full Documentation', link: 'http://wiki.dreamfactory.com/'},
-                            {name: 'Community Forum', link: 'http://community.dreamfactory.com/'},
-                            {name: 'Bugs and Feature Requests', link: 'https://github.com/dreamfactorysoftware/dreamfactory/issues'},
-                            {name: 'DreamFactory on Twitter', link: 'https://twitter.com/dfsoftwareinc'},
-                            {name: 'DreamFactory Blog', link: 'http://blog.dreamfactory.com/'},
-                            {name: 'Contact Support', link: 'http://www.dreamfactory.com/support'},
+                            {name: 'Written Tutorials',         icon: 'file-text',       link: 'http://wiki.dreamfactory.com/DreamFactory/Tutorials'},
+                            {name: 'Video Tutorials',           icon: 'video-camera',    link: 'http://wiki.dreamfactory.com/DreamFactory/Videos'},
+                            {name: 'Full Documentation',        icon: 'book',            link: 'http://wiki.dreamfactory.com/'},
+                            {name: 'Community Forum',           icon: 'comments',        link: 'http://community.dreamfactory.com/'},
+                            {name: 'Bugs and Feature Requests', icon: 'bug',             link: 'https://github.com/dreamfactorysoftware/dreamfactory/issues'},
+                            {name: 'DreamFactory on Twitter',   icon: 'twitter',         link: 'https://twitter.com/dfsoftwareinc'},
+                            {name: 'DreamFactory Blog',         icon: 'pencil-square-o', link: 'http://blog.dreamfactory.com/'},
+                            {name: 'Contact Support',           icon: 'support',         link: 'http://www.dreamfactory.com/support'},
                         ]
                     ">
                         <div class="banner resource-link">
-                            <i class="fa fa-file-text" aria-hidden="true"></i>
+                            <i class="fa fa-{{resource.icon}}" aria-hidden="true"></i>
                             &nbsp;
                             <a href="{{resource.link}}" target="_blank">{{resource.name}}</a>
                         </div>
