--- a/app/styles/sass/partials/themes/matan-light/_homepage.scss
+++ b/app/styles/sass/partials/themes/matan-light/_homepage.scss
@@ -33,7 +33,7 @@ $top-circle-centering: "32% - (#{ $play-circle-diameter }) / 2";
 
 
           @media (min-width: $screen-md-min) and (max-width: $screen-md-min + 230px) {
-            min-height: 170px;
+            min-height: 180px;
           }
 
           @media (max-width: $screen-md-min) and (min-width: $screen-md-min - 200px) {
@@ -42,6 +42,10 @@ $top-circle-centering: "32% - (#{ $play-circle-diameter }) / 2";
 
           @media (min-width: $screen-md-min + 231px) {
             min-height: 185px;
+          }
+
+          @media (min-width: $screen-lg-min + 280px) {
+            min-height: 140px;
           }
 
 
